<?xml version="1.0"?>
<package format="2">
  <name>wall_following_assignment</name>
  <version>0.0.0</version>
  <description>The wall_following_assignment package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nagel@todo.todo">nagel</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>

  <exec_depend>sensor_msgs</exec_depend>



<test_depend>ament_lint_auto</test_depend>

  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
